tests: allow a bit more time for JDK7 (#172)